@startuml

class BenchmarkUtil {
    + Identifier: Guid
    - _strBuilder: StringBuilder
    - _repeat: int
    - _stopwatch: Stopwatch
    + Config: IConfiguration
    + BenchmarkUtil(IConfiguration config)
    + InvokeWithBenchmark(component BenchmarkComponent, 
    + fn: Action<BenchmarkComponent> , nameOfMethod: string ,Repeat: int?): void
    + ResetBenchmark(): void
    + SetMarker(component: object, marker: string): void
    + DownloadFileAsync(js: IJSRuntime , fileName: string): ValueTask<object>
}

class BenchmarkComponent extends ComponentBase {
    + BenchmarkUtil: BenchmarkUtil
    + ToString(): String
}

class VersionComponent {
    + Orders: List<Order>
    + RenderChart: RenderChart
    + JS: IJSRuntime
    + GenerateOrders(countOrders: int): void
    + VisualizeOrderStatusSuccess(): void
    + PopulateChartOrderState(): void
}

BenchmarkUtil --> IConfiguration
BenchmarkUtil --> Stopwatch
BenchmarkUtil ..> IJSRuntime
BenchmarkComponent --> BenchmarkUtil
BenchmarkComponent <|-- VersionComponent
VersionComponent --> Order
VersionComponent --> RenderChart
VersionComponent --> IJSRuntime

@enduml
